--- a/proyecto9Angular/src/app/app.component.html
+++ b/proyecto9Angular/src/app/app.component.html
@@ -2,11 +2,10 @@
 
 
 
-<div class="container">
 
-    <router-outlet></router-outlet>
+<div class="top-header-m-bg"></div>
+<router-outlet></router-outlet>
 
 
 
-</div>
 <app-footer></app-footer>
