--- a/proyecto9Angular/src/app/components/homepublic/homepublic.component.html
+++ b/proyecto9Angular/src/app/components/homepublic/homepublic.component.html
@@ -1,3 +1,62 @@
-<p>
-  homepublic works!
-</p>
+<section>
+    <div class="home-banner">
+        <div class="container">
+            <div class="col-md-6">
+                <div class="home-banner-img">
+                    <div class="home-banner-text">
+                        <h3>Nueva coleccion</h3>
+                        <h5>
+                            Excepteur sint occaecat cupidatat non proident.
+                        </h5>
+
+                    </div>
+                    <a href="">
+                        <img alt="" class="img-responsive" src="http://placehold.it/800x766">
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="home-banner-img">
+                    <div class="home-banner-text">
+                        <h4>Spring dress</h4>
+                        <h6>
+                            Duis aute irure dolor in rollit anim id est.
+                        </h6>
+
+                    </div>
+                    <a href="">
+                        <img alt="" class="img-responsive" src="http://placehold.it/800x767">
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="home-banner-img">
+                    <div class="home-banner-text">
+                        <h4>Glass go</h4>
+                        <h6>
+                            Duis aute irure dolor in rollit anim id est.
+                        </h6>
+
+                    </div>
+                    <a href="">
+                        <img alt="" class="img-responsive" src="http://placehold.it/800x767">
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="home-banner-img">
+                    <div class="home-banner-text">
+                        <h4>Top sale of 2014y</h4>
+                        <h6>
+                            Duis aute irure dolor in rollit anim id est.
+                        </h6>
+
+                    </div>
+                    <a href="">
+                        <img alt="" class="img-responsive" src="http://placehold.it/800x383">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
