--- a/proyecto9Angular/src/app/components/login/login.component.html
+++ b/proyecto9Angular/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div id="full" class="container mt-5">
+<!-- <div id="full" class="container mt-5">
     <div class="d-flex justify-content-center h-100">
         <form>
             <div class="card">
@@ -11,7 +11,7 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <!-- " -->
+
                     <form (ngSubmit)="checkLogin(formLogin)" #formLogin="ngForm">
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
@@ -47,25 +47,51 @@
             </div>
         </form>
     </div>
-</div>
+</div> -->
 
+<!--------------------------------------------------------------------------------------------------------------------------------->
 
-
-<!-- <form>
-    <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+<section class="m-t-40">
+    <div class="second-page-header center">
+        <div class="">
+            <h2>Login Page</h2>
+        </div>
     </div>
 
-    <button type="button" class="btn btn-info mb-2">Entrar</button>
-
-    <a class="nav-link" [routerLink]="['/newLogin']"> Crear cuenta</a>
 
 
 
-</form> -->
+    <div class="row">
+        <div class="col-md-6 col-sm-8 col-md-offset-3 col-sm-offset-2">
+            <div class="block-form box-border wow fadeInLeft animated" data-wow-duration="1s">
+                <h3><i class="fa fa-unlock"></i>Login</h3>
+                <p>Por favor introduce tu usuario y password</p>
+                <form (ngSubmit)="checkLogin(formLogin)" #formLogin="ngForm">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <input type="text" class="form-control" placeholder="email" name="email" ngModel required minlength="3" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" [(ngModel)]="login.email">
+                        </div>
+                        <div class="col-md-6">
+                            <input type="text" class="form-control" placeholder="password" name="pass" ngModel required minlength="3" [(ngModel)]="login.pass">
+                        </div>
+                        <div class="col-md-12">
+                            <hr>
+                            <input type="submit" value="Login" class="btn-default">
+                            <input type="reset" value="Reset password" class="btn-default">
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <span class="alert-danger" *ngIf="formLogin.submitted && formLogin.controls['email'].errors">El email es obliatorio</span>
+            <span class=" alert-warning" *ngIf="formLogin.submitted && formLogin.controls['pass'].errors">El password es obligatorio</span>
+            <div class="block-form box-border wow fadeInRight animated" data-wow-duration="1s">
+                <h3><i class="fa fa-pencil"></i>Crear nueva cuenta</h3>
+                <p>Registration allows you to avoid filling in billing and shipping forms every time you checkout on this website.</p>
+                <hr>
+                <a [routerLink]="['/newLogin']" class="btn-default-1">Register</a>
+            </div>
+        </div>
+    </div>
+
+
+</section>
