--- a/proyecto9Angular/src/app/components/valuations/valuations.component.html
+++ b/proyecto9Angular/src/app/components/valuations/valuations.component.html
@@ -1,4 +1,4 @@
-<h2>
+<!-- <h2>
     Valoraciones</h2>
 <div *ngIf="valuations.length>0">
 
@@ -12,4 +12,25 @@
 <div *ngIf="valuationsUser.length>0">
     <div *ngFor="let item3 of valuationsUser">{{item3.asses}} {{item3.opinion}}</div>
 
+</div> -->
+
+<!--------------------------------------------->
+
+
+<div *ngFor="let item2 of valuations" class="review-header">
+    <h5><b>{{item2.nameUser}}</b>
+    </h5>
+    <div class="product-rating">
+        <div class="stars">
+            <span [class.active]="item2.assesfirst>4" class="star "></span><span [class.active]="item2.assesfirst>3" class="star  "></span><span [class.active]="item2.assesfirst>2" class="star  "></span><span [class.active]="item2.assesfirst>1" class="star  "></span>
+            <span [class.active]="item2.assesfirst>0" class="star  "></span>
+        </div>
+    </div>
+    <small class="text-muted">{{item2.date}}</small>
+
+    <div class="review-body">
+        <p>{{item2.opinion}}</p>
+
+    </div>
 </div>
+<hr>
